--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemon": "^2.0.22",
     "puppeteer": "^19.7.2",
     "randomstring": "^1.2.3",
-    "razorpay": "^2.8.6"
+    "razorpay": "^2.8.6",
+    "render": "^0.1.4"
   },
   "description": ""
 }
